--- a/EOS/Base.lproj/Main.storyboard
+++ b/EOS/Base.lproj/Main.storyboard
@@ -1,10 +1,52 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mO2-jB-tdl">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
+        <!--Login View-->
+        <scene sceneID="p3Q-k1-mbz">
+            <objects>
+                <viewController id="mO2-jB-tdl" customClass="loginView" customModule="EOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wkS-ip-Fcz"/>
+                        <viewControllerLayoutGuide type="bottom" id="F3f-LF-tTa"/>
+                    </layoutGuides>
+                    <view key="view" autoresizesSubviews="NO" contentMode="scaleToFill" id="c3W-Mm-csg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2vy-Rc-9Vd">
+                                <rect key="frame" x="495" y="324" width="46" height="30"/>
+                                <state key="normal" title="survey"/>
+                                <connections>
+                                    <action selector="surveyTapped:" destination="mO2-jB-tdl" eventType="touchUpInside" id="NQZ-qS-djx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gC5-pN-QFC">
+                                <rect key="frame" x="168" y="383" width="154" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="Fnj-Tc-KTi"/>
+                                    <constraint firstAttribute="width" constant="154" id="ipV-Rl-FuD"/>
+                                </constraints>
+                                <state key="normal" title="Login" image="login_button.png"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="iH8-hR-Fca"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="F3f-LF-tTa" firstAttribute="top" secondItem="gC5-pN-QFC" secondAttribute="bottom" constant="145" id="Tvi-O7-qb8"/>
+                            <constraint firstItem="gC5-pN-QFC" firstAttribute="centerX" secondItem="c3W-Mm-csg" secondAttribute="centerX" id="gLV-Ha-D8N"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gNH-6x-2yP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-394" y="393"/>
+        </scene>
         <!--Graph View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -25,4 +67,7 @@
             <point key="canvasLocation" x="338" y="401"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="login_button.png" width="1032" height="452"/>
+    </resources>
 </document>
